# web-snake

./: .gitignore  Cargo.toml  README.md  index.html  style.css
src/: main.rs  style.css
