[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.11.0", features = ["default"] }
leptos = { version = "0.6.9", features = ["csr"] }
rand = "0.8.5"
web-sys = { version = "0.3.69", features = [
    "CanvasRenderingContext2d",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomRect",
] }
